# external

./: .gitmodules  CMakeLists.txt  README.txt
cmake/: VulkanMemoryAllocator.cmake  argparse.cmake  corrosion.cmake  freetype.cmake  half.cmake  harfbuzz.cmake  icu4x.cmake  lz4.cmake  miniaudio.cmake  simdutf.cmake  unordered_dense.cmake
